# captcha

./: .env.example  .gitignore  DAGITIM.md  README.md  next.config.ts  package-lock.json  package.json  test-e2e.mjs  test-edge.mjs  test-security.mjs  test-vision.mjs
public/: llms.txt  ornek.html  specter.js  veylify.js
public/.well-known/: security.txt
public/sdk/: rest.md  widget.md
public/sdk/specter-node/: README.md  index.mjs  package.json  specter.js  types.d.ts  veylify.js
public/sdk/specter-php/: README.md  composer.json
public/sdk/specter-python/: README.md  pyproject.toml  setup.py
public/sdk/specter-python/specter/: __init__.py  client.py
public/sdk/specter-python/veylify/: __init__.py  client.py
public/video/: hero.webm  ucan-baykus-v7.webm  ucan-baykus-v8.webm
scripts/: blob-kucult.mjs  ghost-analiz.mjs  ghost-render-test.mjs  gorsel-dogrula.mjs  sync-widget.mjs
src/: instrumentation.ts  middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  robots.ts  sitemap.ts  twitter-image.tsx
src/app/(auth)/: AuthMixfont.tsx  layout.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/demo/: DemoClient.tsx  page.tsx
src/app/durum/: page.tsx
src/app/panel/: AiAjanNabzi.tsx  ApiAbuseBolumu.tsx  CanliSavunmaAkisi.tsx  DavranisBiyometriBolumu.tsx  DerinlikBolumleri.tsx  FedereBolumu.tsx  GenelBakis.i18n.ts  GenelBakisIstemci.tsx  (+20 more)
src/lib/: auth.ts  clerk-durum.ts  cn.ts  csv.ts  flag.ts  marka.ts  ozet.ts  panel-nav.ts  platform-admin.ts  rbac-server.ts  rbac.ts  widget-i18n.ts
(+671 files in other folders)
